<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ma.ac.fst.ahniche_amine.guideuniversitaire.ActivityNvForm">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

    <Button
        android:id="@+id/btnAjInst"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickAjouterInst"
        android:text="@string/btnAjUniv"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/actvInst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/actvInst" />

    <AutoCompleteTextView
        android:id="@+id/actvInst"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/actvNomInst"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actvUniv" />

    <AutoCompleteTextView
        android:id="@+id/actvUniv"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/actvNomUniv"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomInst" />

    <EditText
        android:id="@+id/etNomInst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/actvNomForm"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:onClick="onClickOk"
        android:text="@string/btnOk"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescForm" />

    <Button
        android:id="@+id/btnAjUniv"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickAjouterUniv"
        android:text="@string/btnAjUniv"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/actvUniv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/actvUniv" />

    <AutoCompleteTextView
        android:id="@+id/actvTypeForm"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/actvTypeForm"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actvInst" />

    <EditText
        android:id="@+id/etDescForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/etDescForm"
        android:inputType="textMultiLine"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actvTypeForm" />

</android.support.constraint.ConstraintLayout>
</ScrollView>
